<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nuevo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="135dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/image2" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:height="50dp"
            android:background="@drawable/input2"
            android:hint="@string/addtitle"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:height="200dp"
            android:background="@drawable/input2"
            android:hint="@string/adddescripcion"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/degradado"
            android:text="@string/crear"
            android:textColor="@color/negro"
            android:drawableLeft="@drawable/plus"
            app:backgroundTint="@null" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>