<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="212dp"
        android:background="@drawable/degradado"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight=".5"
            app:srcCompat="@drawable/user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingTop="25dp"
                android:text="@string/user"
                android:textAlignment="left"
                android:textColor="@color/blanco"
                android:textSize="@dimen/subtitulo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/nivel"
                android:textAlignment="left"
                android:textColor="@color/blanco"
                android:textSize="@dimen/subtitulo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/likes"
                android:textAlignment="left"
                android:textColor="@color/blanco"
                android:textSize="@dimen/subtitulo"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="513dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="fill_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/contentDescription"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/image1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="fill_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/contentDescription"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/image2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="fill_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/contentDescription"
            android:paddingTop="10dp"
            app:srcCompat="@drawable/image3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>