<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menta"
    tools:context=".publicacion">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="59dp"
        android:background="@color/negroMate"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="676dp">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/list" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/search" />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/bell" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/share1" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="414dp"
        android:layout_height="160dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_weight=".5"
                android:paddingTop="10dp"
                android:scrollbarSize="@dimen/tituloPublicacion"
                android:text="@string/titleDescription"
                android:textAlignment="center"
                android:textSize="@dimen/subtitulo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingRight="5dp"
                android:text="@string/descripcion"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="15dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/eye" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numviews"
                    android:textColor="@color/negro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="15dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/heart" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numlikes"
                    android:textColor="@color/negro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="15dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/share" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numviews"
                    android:textColor="@color/negro" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="264dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/desc"
            android:textColor="@color/negro" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:adjustViewBounds="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:scaleType="1"
            app:srcCompat="@drawable/image3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:paddingLeft="10dp"
                android:paddingRight="2dp"
                android:scaleType="1"
                app:srcCompat="@drawable/image1" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="1"
                app:srcCompat="@drawable/image1" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:paddingLeft="2dp"
                android:paddingRight="10dp"
                android:scaleType="1"
                app:srcCompat="@drawable/image1" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="71dp"
        android:layout_height="65dp"
        android:background="@drawable/btnredondo2"
        app:srcCompat="@drawable/anadir"
        tools:layout_editor_absoluteX="322dp"
        tools:layout_editor_absoluteY="643dp" />

</androidx.constraintlayout.widget.ConstraintLayout>